# umlquick

./: CMakeLists.txt  README  project.config  umlquick.pro  uq
examples/: BusyBox.qml  flickable.qml  hover.qml  item2d.qml  mpta.qml  objectInstancesTimer.qml  sidebar.qml  traceHover.qml  windowBusyBox.qml
examples/traces/: flickable.qml  mpta.qml
imports/: CMakeLists.txt  imports.pro
imports/Diagrams/UmlSequence/: Message.qml  MessageRepeated.qml  ObjectInstance.qml  Return.qml  UmlSequenceDiagram.qml
imports/UmlQuick/: UmlQuick.pro
imports/UmlQuick/Sequence/: MessageRepeated.qml  ObjectInstance.qml  Return.qml  UmlSequenceDiagram.qml  qmldir
src/: src.pro
src/generators/: CMakeLists.txt  objectinstances.cpp  objectinstances_p.h
src/trace/: CMakeLists.txt  messagetrace.cpp  messagetrace_p.h  plugin.cpp  qmldir  qmlmessagetrace.cpp  qmlmessagetrace_p.h  trace.pro
